--- a/index.html
+++ b/index.html
@@ -1,2 +1,37 @@
-<html> "Hello World" </html>
-<html>"Hi this is Ritika"</html>
+<!DOCTYPE html>
+<html lang = "en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Web Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Web Page</h1>
+    </header>
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>This is a brief introduction about myself.</p>
+        </section>
+        <section>
+            <h2>My Projects</h2>
+            <ul>
+                <li>Project 1</li>
+                <li>Project 2</li>
+                <li>Project 3</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Contact</h2>
+            <p>You can reach me at <a href="mailto: ritikavasanth15@gmail.com"></a></p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Ritika Vasanth</p>
+    </footer>
+</body> 
+            
+</html>
+</body>
