--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
         <section>
             <h2>Contact</h2>
-            <p>You can reach me at <a href="mailto: ritikavasanth15@gmail.com"></a></p>
+            <p>You can reach me at <a href="mailto:ritikavasanth15@gmail.com">ritikavasanth15@gmail.com</a></p>
         </section>
     </main>
     <footer>
