--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
 <body>
     <header>
         <h1>Welcome to My Web Page</h1>
+<nav>
+  <a href="#about">About</a>
+  <a href="#projects">Projects</a>
+  <a href="#contact">Contact</a>
+</nav>
     </header>
+    <section id="about">
+  <h2>About Me</h2>
+  <p>This is a brief introduction about myself.</p>
+</section>
+<section id="projects">
+  <h2>My Projects</h2>
+  <ul>
+    <li>Project 1</li>
+    <li>Project 2</li>
+    <li>Project 3</li>
+  </ul>
+</section>
+<section id="contact">
+  <h2>Contact</h2>
+  <p>You can reach me at <a href="mailto:ritikavasanth15@gmail.com">ritikavasanth15@gmail.com</a></p>
+</section>
     <main>
-        <section>
-            <h2>About Me</h2>
-            <p>This is a brief introduction about myself.</p>
-        </section>
-        <section>
-            <h2>My Projects</h2>
-            <ul>
-                <li>Project 1</li>
-                <li>Project 2</li>
-                <li>Project 3</li>
-            </ul>
-        </section>
-        <section>
             <h2>Contact</h2>
             <p>You can reach me at <a href="mailto:ritikavasanth15@gmail.com">ritikavasanth15@gmail.com</a></p>
         </section>
