--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
+        <section id="home">
+        <h1>Welcome to My Web Page</h1>
+        <p>Hi, I'm Ritika Vasanth. This is my personal website.</p>
+    </section>
     </header>
     <section id="about">
         <h2>About Me</h2>
