--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <section id="home">
         <h1>Welcome to My Web Page</h1>
         <p>Hi, I'm Ritika Vasanth. This is my personal website.</p>
+<div class="flower">
+  <div class="petal petal1"></div>
+  <div class="petal petal2"></div>
+  <div class="petal petal3"></div>
+  <div class="petal petal4"></div>
+  <div class="petal petal5"></div>
+  <div class="petal petal6"></div>
+  <div class="center"></div>
+</div>
     </section>
     </header>
     <section id="about">
