--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
-        <section id="home">
-        <h1>Welcome to My Web Page</h1>
-        <p>Hi, I'm Ritika Vasanth. This is my personal website.</p>
-    </section>
     </header>
+    <section id="home">
+        <h1>Welcome to My Web Page</h1>
+        <p>This is a simple web page created as a demonstration.</p>
+        <div class="dna">
+  <div class="dot dot1"></div>
+  <div class="dot dot2"></div>
+  <div class="dot dot3"></div>
+  <div class="dot dot4"></div>
+  <div class="dot dot5"></div>
+        </div>
+    </section>  
     <section id="about">
         <h2>About Me</h2>
         <p>This is a brief introduction about myself.</p>
