--- a/index.html
+++ b/index.html
@@ -16,15 +16,9 @@
         </nav>
     </header>
     <section id="home">
+        <div class="heartbeat"></div>
         <h1>Welcome to My Web Page</h1>
         <p>This is a simple web page created as a demonstration.</p>
-        <div class="dna">
-  <div class="dot dot1"></div>
-  <div class="dot dot2"></div>
-  <div class="dot dot3"></div>
-  <div class="dot dot4"></div>
-  <div class="dot dot5"></div>
-        </div>
     </section>  
     <section id="about">
         <h2>About Me</h2>
