--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
     <link rel="stylesheet" href="style.css">
+     <title>Heart Animation Effect</title>
+
+    <style>
+        canvas {
+        position: absolute;
+        left:0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,.2);
+        }
+    </style>
 </head>
 <body>
+     <canvas id="heart"></canvas>
+
+        <!--JavaScript-->
+        <script src="script.js"></script>
     <header>
         <nav>
             <a href="#home">Home</a>
@@ -16,7 +32,6 @@
         </nav>
     </header>
     <section id="home">
-        <div class="heartbeat"></div>
         <h1>Welcome to My Web Page</h1>
         <p>This is a simple web page created as a demonstration.</p>
     </section>  
