--- a/index.html
+++ b/index.html
@@ -19,21 +19,8 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
-    <section id="home">
-        <title>Heart Animation Effect</title>
-
-    <style>
-        canvas {
-        position: absolute;
-        left:0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0,0,0,.2);
-        }
-    </style>
- <!--JavaScript-->
-        <script src="script.js"></script>
+    <section id="home">  
+        <canvas id="heart-canvas"></canvas>
         <h1>Welcome to My Web Page</h1>
         <p>This is a simple web page created as a demonstration.</p>
     </section>  
