--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="style.css">
      
 </head>
-<body>
-     <canvas id="heart"></canvas>
-
-       
+<body> 
     <header>
         <nav>
             <a href="#home">Home</a>
@@ -19,8 +16,8 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
-    <section id="home">  
-        <canvas id="heart-canvas"></canvas>
+    <section id="home"> 
+        <canvas id="particles-canvas"></canvas> 
         <h1>Welcome to My Web Page</h1>
         <p>This is a simple web page created as a demonstration.</p>
     </section>  
@@ -43,5 +40,6 @@
     <footer>
         <p>&copy; 2025 Ritika Vasanth</p>
     </footer>
+    <script src="work.js"></script>
 </body>
 </html>
